--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
+  "ConnectionStrings": {
+    "db": "Server=DESKTOP-U893DOI;Initial Catalog = Products;TrustServerCertificate=True;Trusted_Connection=True\""
+  },
+
   "AllowedHosts": "*"
 }
