Fixed connection string in appsettings

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,9 +6,9 @@
     }
   },
 
-  "ConnectionStrings": {
-    "db": "Server=DESKTOP-U893DOI;Initial Catalog = Products;TrustServerCertificate=True;Trusted_Connection=True\""
-  },
+  "AllowedHosts": "*",
 
-  "AllowedHosts": "*"
+  "ConnectionStrings": {
+    "db" : "Server=DESKTOP-U893DOI;Initial Catalog = Products;TrustServerCertificate=True;Trusted_Connection=True"
+  }
 }
