Changed repositories location

--- a/appsettings.json
+++ b/appsettings.json
@@ -9,6 +9,6 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "db" : "Server=DESKTOP-U893DOI;Initial Catalog = Products;TrustServerCertificate=True;Trusted_Connection=True"
+    "db" : "Server=DESKTOP-U893DOI;Initial Catalog = UserDb;TrustServerCertificate=True;Trusted_Connection=True"
   }
 }
